@@ -46,7 +46,7 @@ public class DataRecordParserTest {
 
             System.out.println(val);
 
-            Assert.assertEquals(new Long(1330927310113874706l), val);
+            Assert.assertEquals(Long.valueOf(1330927310113874706l), val);
 
         } catch (DecodingException e) {
             Assert.fail("Unexpected exception");
@@ -65,7 +65,7 @@ public class DataRecordParserTest {
 
             Long val = (Long) obj;
 
-            Assert.assertEquals(new Long(-1l), val);
+            Assert.assertEquals(Long.valueOf(-1l), val);
 
         } catch (DecodingException e) {
             Assert.fail("Unexpected exception");
@@ -89,7 +89,7 @@ public class DataRecordParserTest {
 
             Long integer = (Long) obj;
 
-            Assert.assertEquals(new Long(1508), integer);
+            Assert.assertEquals(Long.valueOf(1508), integer);
 
         } catch (DecodingException e) {
             Assert.fail("Failed to parse!");
@@ -108,7 +108,7 @@ public class DataRecordParserTest {
 
             Long integer = (Long) obj;
 
-            Assert.assertEquals(new Long(-1), integer);
+            Assert.assertEquals(Long.valueOf(-1), integer);
 
         } catch (DecodingException e) {
             Assert.fail("Failed to parse!");
@@ -135,49 +135,49 @@ public class DataRecordParserTest {
 
         byte[] bytes = new byte[] { (byte) 0x04, (byte) 0x07, (byte) 0xc8, (byte) 0x1e, (byte) 0x00, (byte) 0x00 };
 
-        assertParsingResults(bytes, Description.ENERGY, DlmsUnit.WATT_HOUR, (byte) 4, new Long(7880));
+        assertParsingResults(bytes, Description.ENERGY, DlmsUnit.WATT_HOUR, (byte) 4, Long.valueOf(7880));
 
         /* e0001nnn Energy J */
 
         /* e0010nnn Volume m^3 */
         bytes = new byte[] { (byte) 0x04, (byte) 0x15, (byte) 0xfe, (byte) 0xbf, (byte) 0x00, (byte) 0x00 };
 
-        assertParsingResults(bytes, Description.VOLUME, DlmsUnit.CUBIC_METRE, (byte) -1, new Long(49150));
+        assertParsingResults(bytes, Description.VOLUME, DlmsUnit.CUBIC_METRE, (byte) -1, Long.valueOf(49150));
 
         bytes = new byte[] { (byte) 0x84, (byte) 0x40, (byte) 0x15, (byte) 0xf8, (byte) 0xbf, (byte) 0x00,
                 (byte) 0x00 };
 
-        assertParsingResults(bytes, Description.VOLUME, DlmsUnit.CUBIC_METRE, (byte) -1, new Long(49144));
+        assertParsingResults(bytes, Description.VOLUME, DlmsUnit.CUBIC_METRE, (byte) -1, Long.valueOf(49144));
 
         /* e0011nnn Mass kg */
 
         /* e01000nn On Time seconds/minutes/hours/days */
         bytes = new byte[] { (byte) 0x04, (byte) 0x22, (byte) 0x38, (byte) 0x09, (byte) 0x00, (byte) 0x00 };
 
-        assertParsingResults(bytes, Description.ON_TIME, DlmsUnit.HOUR, (byte) 0, new Long(2360));
+        assertParsingResults(bytes, Description.ON_TIME, DlmsUnit.HOUR, (byte) 0, Long.valueOf(2360));
 
         /* e01001nn Operating Time seconds/minutes/hours/days */
         bytes = new byte[] { (byte) 0x04, (byte) 0x26, (byte) 0x3d, (byte) 0x07, (byte) 0x00, (byte) 0x00 };
 
-        assertParsingResults(bytes, Description.OPERATING_TIME, DlmsUnit.HOUR, (byte) 0, new Long(1853));
+        assertParsingResults(bytes, Description.OPERATING_TIME, DlmsUnit.HOUR, (byte) 0, Long.valueOf(1853));
 
         /* e10110nn Flow Temperature °C */
         bytes = new byte[] { (byte) 0x02, (byte) 0x5a, (byte) 0x79, (byte) 0x02 };
 
         assertParsingResults(bytes, Description.FLOW_TEMPERATURE, DlmsUnit.DEGREE_CELSIUS, (byte) -1,
-                new Long((short) 633));
+                Long.valueOf((short) 633));
 
         /* e10111nn Return Temperature °C */
         bytes = new byte[] { (byte) 0x02, (byte) 0x5e, (byte) 0xa6, (byte) 0x01 };
 
         assertParsingResults(bytes, Description.RETURN_TEMPERATURE, DlmsUnit.DEGREE_CELSIUS, (byte) -1,
-                new Long((short) 422));
+                Long.valueOf((short) 422));
 
         /* e11000nn Temperature Difference K */
         bytes = new byte[] { (byte) 0x02, (byte) 0x62, (byte) 0xd3, (byte) 0x00 };
 
         assertParsingResults(bytes, Description.TEMPERATURE_DIFFERENCE, DlmsUnit.KELVIN, (byte) -1,
-                new Long((short) 211));
+                Long.valueOf((short) 211));
 
         /* e1101101 Date and time - type F */
         bytes = new byte[] { (byte) 0x04, (byte) 0x6d, (byte) 0x2b, (byte) 0x11, (byte) 0x78, (byte) 0x11 };
@@ -185,8 +185,6 @@ public class DataRecordParserTest {
         DataRecord dataRecord = new DataRecord();
 
         dataRecord.decode(bytes, 0, bytes.length);
-        dataRecord.getDataValue();
-
     }
 
 }
